Fixed moutains appearance on small screen devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -98,7 +98,7 @@ hr {
 
 .mountain {
   width: 45%;
-  height: auto;
+  height: 22%;
   position: relative;
   bottom: -5px;
 }
